--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="app_custom">CUSTOM APP</string>
     <string name="title_activity_movies">Movies</string>
     <string name="title_activity_scores">ScoresActivity</string>
+    <string name="title_activity_spotify">SpotifyActivity</string>
 </resources>
