--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,19 @@
 <resources>
     <string name="app_name">Cloudroid</string>
-    <string name="action_settings">Settings</string>
     <string name="title">Cloudroid Apps!</string>
+
     <string name="app_spotify">SPOTIFY STREAMER</string>
     <string name="app_scores">SCORES APP</string>
     <string name="app_library">LIBRARY APP</string>
     <string name="app_bigger">BUILD IT BIGGER</string>
     <string name="app_reader">CLOUD READER</string>
     <string name="app_custom">CUSTOM APP</string>
+
     <string name="title_activity_movies">Movies</string>
     <string name="title_activity_scores">ScoresActivity</string>
     <string name="title_activity_spotify">SpotifyActivity</string>
+
+    <!-- Action menu label -->
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
