--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,11 @@
     <string name="app_custom">CUSTOM APP</string>
 
     <string name="title_activity_movies">Movies</string>
-    <string name="title_activity_scores">ScoresActivity</string>
-    <string name="title_activity_spotify">SpotifyActivity</string>
+    <string name="title_activity_scores">Scores Activity</string>
+    <string name="title_activity_spotify">Spotify Movies</string>
 
     <!-- Action menu label -->
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="title_activity_movie_details">MovieDetailsActivity</string>
 </resources>
