application name is changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Cloudroid</string>
     <string name="title">Cloudroid Apps!</string>
 
-    <string name="app_spotify">SPOTIFY STREAMER</string>
+    <string name="app_spotify">SPOTIFY MOVIES</string>
     <string name="app_scores">SCORES APP</string>
     <string name="app_library">LIBRARY APP</string>
     <string name="app_bigger">BUILD IT BIGGER</string>
