--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_movie_details">MovieDetailsActivity</string>
+
+    <!-- Movie details label -->
+    <string name="label_movie_rating">Rating</string>
+    <string name="label_movie_release_date">Release Date</string>
 </resources>
